Connect lombok