@@ -1,14 +1,20 @@
 package com.restapp.Restaurant.model;
 
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import javax.persistence.*;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.Set;
 
 @Entity
+@Getter
+@Setter
+@ToString
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
 public class CustomUser implements UserDetails {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -19,50 +25,9 @@ public class CustomUser implements UserDetails {
     @JoinColumn(name = "user_role")
     private CustomRole userRole;
 
-    public CustomUser() {
-    }
-
-    public CustomUser(String userName, String userPassword, CustomRole userRole) {
-        this.userName = userName;
-        this.userPassword = userPassword;
-        this.userRole = userRole;
-    }
-
-    public Integer getUserId() {
-        return userId;
-    }
-
-    public void setUserId(Integer userId) {
-        this.userId = userId;
-    }
-
-    public String getUserName() {
-        return userName;
-    }
-
-    public void setUserName(String userName) {
-        this.userName = userName;
-    }
-
-    public String getUserPassword() {
-        return userPassword;
-    }
-
-    public void setUserPassword(String userPassword) {
-        this.userPassword = userPassword;
-    }
-
-    public CustomRole getUserRole() {
-        return userRole;
-    }
-
-    public void setUserRole(CustomRole userRole) {
-        this.userRole = userRole;
-    }
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singleton(new SimpleGrantedAuthority("ROLE_" + userRole.toString()));
+        return Set.of(userRole);
     }
 
     @Override
